# 01---DEVinCar

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: app.py
app/data/: database.py  db.json
app/entity/menu/: menu_principal.py
app/entity/veiculos/: cls_caminhonete.py  cls_carro.py  cls_motoTriciclo.py  cls_veiculos.py
app/modules/: __init__.py  cls_caminhonete.py  cls_carro.py  cls_menu.py  cls_motoTriciclo.py  cls_validacoes.py  cls_veiculos.py
devincar/: __main__.py  main.py
devincar/data/: database.json  historico_vendas.json
devincar/database/: __init__.py  cls_database.py  cls_historico_vendas.py  database.json  historico_vendas.json
devincar/modules/: __init__.py  cls_caminhonete.py  cls_carro.py  cls_menu.py  cls_moto.py  cls_validacoes.py  cls_veiculos.py  database.py  historico_vendas.py
devincar/utils/: __init__.py  cls_input.py  cls_menu.py  cls_print.py  cls_table.py  cls_validacoes.py
tests/: test_devincar.py
